# Wallpaper-Span

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
com.github.arrdee81.wallpaperspan/: metadata.json
com.github.arrdee81.wallpaperspan/contents/config/: main.xml
com.github.arrdee81.wallpaperspan/contents/ui/: config.qml  main.qml
src/: qmldir  wallpapersync.cpp  wallpapersync.h
